syntax = "proto3";

option csharp_namespace = "CurrencyService.Grpc";

package user_currencies;

service UserCurrenciesService {
  rpc GetUserCurrencies (GetUserCurrenciesRequest) returns (GetUserCurrenciesResponse);
  rpc GetCurrencies (GetCurrenciesRequest) returns (GetCurrenciesResponse);
  rpc SetUserCurrency (SetUserCurrencyRequest) returns (SetUserCurrencyResponse);
}

message Currency {
  int32 id = 1;
  string name = 2;
  double rate = 3;
}

message GetUserCurrenciesRequest {
  int32 user_id = 1;
}

message GetUserCurrenciesResponse {
  repeated Currency currencies = 1;
}

message GetCurrenciesRequest {
  // Пустой запрос
}

message GetCurrenciesResponse {
  repeated Currency currencies = 1;
}

message SetUserCurrencyRequest {
  int32 user_id = 1;
  int32 currency_id = 2;
}

message SetUserCurrencyResponse {
  bool success = 1;
}